added Career table and seeds

--- a/app/views/candidates/_candidate.html.erb
+++ b/app/views/candidates/_candidate.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Electorate:</strong>
-    <%= link_to( candidate.electorate.name, candidate.electorate.address) %>
+    <%= link_to( candidate.electorate.name, candidate.electorate.link) %>
   </p>
 
   <p>
