--- a/app/views/factions/_faction.html.erb
+++ b/app/views/factions/_faction.html.erb
@@ -4,4 +4,9 @@
     <%= faction.name %>
   </p>
 
+  <p>
+    <strong>Candidates:</strong>
+    <%= faction.candidates.map{|c| c.name} %>
+  </p>
+
 </div>
