--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,9 +10,11 @@
   <li><%= link_to "Candidates", "/candidates" %></li>
   <li><%= link_to "Electorates", "/electorates" %></li>
   <li><%= link_to "Parties", "/parties" %></li>
-  <li>Parties</li>
-  <li>Religion</li>
-  <li>Education Qualification</li>
-  <li>Prior Working History</li>
-  <li>National Background</li>
+  <li><%= link_to "Professions (primary career pre-politics)", "/professions" %></li>
+  <li><%= link_to "Religion", "/religions" %></li>
+  <li><%= link_to "Qualification", "/qualification_levels" %></li>
+  <li><%= link_to "Union Affiliation", "/unions" %></li>
+  <li><%= link_to "Factional Affiliation", "/factions" %></li>
+  <li><%= link_to "Field Of Study", "/field_of_studies" %></li>
+
 </ul>
