--- a/app/views/unions/_union.html.erb
+++ b/app/views/unions/_union.html.erb
@@ -4,4 +4,9 @@
     <%= union.name %>
   </p>
 
+  <p>
+    <strong>Candidate:</strong>
+    <%= union.candidates.map{|c| c.name} %>
+  </p>
+
 </div>
