--- a/app/views/religions/index.html.erb
+++ b/app/views/religions/index.html.erb
@@ -2,6 +2,25 @@
 
 <h1>Religions</h1>
 
+<p>We found that the politicians claim to be more religious than the rest of us. Shock!</p>
+
+  <div>
+    <h2>General Population by Religion</h2>
+    <%= pie_chart @genpop_religion %>
+  </div>
+  <div>
+    <h2>ALP by Religion</h2>
+    <%= pie_chart @alp_religion %>
+  </div>
+  <div>
+    <h2>Liberals by Religion</h2>
+    <%= pie_chart @lib_religion %>
+  </div>
+  <div>
+    <h2>Nationals by Religion</h2>
+    <%= pie_chart @nat_religion %>
+  </div>
+
 <div id="religions">
   <% @religions.each do |religion| %>
     <%= render religion %>
