better grouping in controllers, application controller

--- a/app/views/field_of_studies/_field_of_study.html.erb
+++ b/app/views/field_of_studies/_field_of_study.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id field_of_study %>">
   <p>
     <strong>Field:</strong>
-    <%= field_of_study.field %>
+    <%= field_of_study.name %>
   </p>
 
   <p>
