--- a/app/views/field_of_studies/index.html.erb
+++ b/app/views/field_of_studies/index.html.erb
@@ -2,6 +2,25 @@
 
 <h1>Field of studies</h1>
 
+<p>Focussing only on Tertiary and further studies, we discovered that the politicians standing for election had focussed their studies on a narrow selection of educational oppotunities relative to the population at large</p>
+
+  <div>
+    <h2>General Population by Field Of Study</h2>
+    <%= pie_chart @genpop_field_of_studies %>
+  </div>
+  <div>
+    <h2>ALP by Field Of Study</h2>
+    <%= pie_chart @alp_field_of_studies %>
+  </div>
+  <div>
+    <h2>Liberals by Field Of Study</h2>
+    <%= pie_chart @lib_field_of_studies %>
+  </div>
+  <div>
+    <h2>Nationals by Field Of Study</h2>
+    <%= pie_chart @nat_field_of_studies %>
+  </div>
+
 <div id="field_of_studies">
   <% @field_of_studies.each do |field_of_study| %>
     <%= render field_of_study %>
