--- a/app/views/qualification_levels/_qualification_level.html.erb
+++ b/app/views/qualification_levels/_qualification_level.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id qualification_level %>">
   <p>
     <strong>Level:</strong>
-    <%= qualification_level.level %>
+    <%= qualification_level.name %>
   </p>
 
   <p>
