--- a/app/views/religions/index.html.erb
+++ b/app/views/religions/index.html.erb
@@ -6,19 +6,19 @@
 
   <div>
     <h2>General Population by Religion</h2>
-    <%= pie_chart @genpop_religion %>
+    <%= pie_chart @genpop_religions %>
   </div>
   <div>
     <h2>ALP by Religion</h2>
-    <%= pie_chart @alp_religion %>
+    <%= pie_chart @alp_religions %>
   </div>
   <div>
     <h2>Liberals by Religion</h2>
-    <%= pie_chart @lib_religion %>
+    <%= pie_chart @lib_religions %>
   </div>
   <div>
     <h2>Nationals by Religion</h2>
-    <%= pie_chart @nat_religion %>
+    <%= pie_chart @nat_religions %>
   </div>
 
 <div id="religions">
