Responsive markup examples

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,39 @@
   <p>search for any candidate, party, faction etc (coming soon)</p>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md">
+      <h2>Some header</h2>
+      <p>arcu. Cras fringilla hendrerit mattis. Quisque nec turpis at felis cursus blandit vitae sed magna. Duis tincidunt condimentum diam id consectetur. Phasellus facilisis odio quam, vitae porta nisl interdum non. Mauris quis mollis ex. Etiam euismod scelerisque justo, vitae sollicitu</p>
+    </div>
+    <div class="col-md">
+      <h2>Some header 2</h2>
+      <p>arcu. Cras fringilla hendrerit mattis. Quisque nec turpis at felis cursus blandit vitae sed magna. Duis tincidunt condimentum diam id consectetur. Phasellus facilisis odio quam, vitae porta nisl interdum non. Mauris quis mollis ex. Etiam euismod scelerisque justo, vitae sollicitu</p>
+    </div>
+    <div class="col-md">
+      <h2>Some header 3</h2>
+      <p>arcu. Cras fringilla hendrerit mattis. Quisque nec turpis at felis cursus blandit vitae sed magna. Duis tincidunt condimentum diam id consectetur. Phasellus facilisis odio quam, vitae porta nisl interdum non. Mauris quis mollis ex. Etiam euismod scelerisque justo, vitae sollicitu</p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md">
+      <%= link_to "Button Primary", "/candidates", class: "btn btn-primary" %>
+    </div>
+    <div class="col-md">
+      <%= link_to "Button Secondary", "/candidates", class: "btn btn-secondary" %>
+    </div>
+    <div class="col-md">
+      <%= link_to "Button Outline", "/candidates", class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+</div>
+
 <ul>View data by...
-  <li><%= link_to "Candidates", "/candidates" %></li>
+  <li><%= link_to "Candidates", "/candidates %></li>
   <li><%= link_to "Electorates", "/electorates" %></li>
   <li><%= link_to "Parties", "/parties" %></li>
   <li><%= link_to "Professions (primary career pre-politics)", "/professions" %></li>
