hotfix on missing double quote

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,7 @@
 </div>
 
 <ul>View data by...
-  <li><%= link_to "Candidates", "/candidates %></li>
+  <li><%= link_to "Candidates", "/candidates" %></li>
   <li><%= link_to "Electorates", "/electorates" %></li>
   <li><%= link_to "Parties", "/parties" %></li>
   <li><%= link_to "Professions (primary career pre-politics)", "/professions" %></li>
