--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -43,14 +43,23 @@ https://github.com/ankane/chartkick/issues/220
 
 
 <div id="candidates">
-  <table>
+  <table id="candidate-candidate-table" class="table table-striped">
+    <thead>
+      <tr>
+        <th>Candidate</th>
+        <th>Electorate</th>
+        <th>Party</th>
+        <th>Religion</th>
+        <th>Profession</th>
+      </tr>
+    </thead>
     <% @candidates.each do |candidate| %>
       <tr>
         <td><%= link_to candidate.name, candidate %></td>
         <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-        <td><%= candidate.electorate.name %></td>
-        <td><%= candidate.party.name %></td>
-        <td><%= link_to candidate.name, candidate %></td>
+        <td><%= link_to candidate.party.name, candidate.party %></td>
+        <td><%= link_to candidate.religion.name, candidate.religion %></td>
+        <td><%= link_to candidate.profession.name, candidate.profession %></td>
       </tr>
     <% end %>
   </table>
@@ -58,7 +67,19 @@ https://github.com/ankane/chartkick/issues/220
 
 
 
-<%= link_to "New candidate", new_candidate_path %>
+
 
 
 https://chartkick.com/
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+<script>
+$(document).ready(function() {
+    $('#candidate-candidate-table').DataTable({
+      paging: false,
+      searching: false
+    });
+} );
+</script>
