--- a/app/views/qualification_levels/_qualification_level.html.erb
+++ b/app/views/qualification_levels/_qualification_level.html.erb
@@ -1,11 +1,26 @@
 <div id="<%= dom_id qualification_level %>">
-  <p>
-    <strong>Level:</strong>
-    <%= qualification_level.name %>
-  </p>
+  <h2><%= link_to qualification_level.name, qualification_level %></h2>
 
-  <p>
-    <strong>Candidate:</strong>
-    <%= qualification_level.candidates.map{ |c| c.name }%>
-  </p>
+  <div id="qualification_level-candidates">
+    <table id="candidate-qualification_level-table" class="table table-striped">
+      <thead>
+        <tr>
+          <th>Candidate</th>
+          <th>Electorate</th>
+          <th>Party</th>
+          <th>Religion</th>
+          <th>Profession</th>
+        </tr>
+      </thead>
+      <% qualification_level.candidates.each do |candidate| %>
+        <tr>
+          <td><%= link_to candidate.name, candidate %></td>
+          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
+          <td><%= link_to candidate.party.name, candidate.party %></td>
+          <td><%= link_to candidate.religion.name, candidate.religion %></td>
+          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
 </div>
