--- a/app/views/religions/_religion.html.erb
+++ b/app/views/religions/_religion.html.erb
@@ -1,12 +1,27 @@
 <div id="<%= dom_id religion %>">
-  <p>
-    <strong>Name:</strong>
-    <%= religion.name %>
-  </p>
+  <h2><%= link_to religion.name, religion %></h2>
 
-  <p>
-    <strong>Candidates:</strong>
-    <%= religion.candidates.map{|c| c.name} %>
-  </p>
-
+  <div id="religion-candidates">
+    <table id="candidate-religion-table" class="table table-striped">
+      <thead>
+        <tr>
+          <th>Candidate</th>
+          <th>Electorate</th>
+          <th>Party</th>
+          <th>Religion</th>
+          <th>Profession</th>
+        </tr>
+      </thead>
+      <% religion.candidates.each do |candidate| %>
+        <tr>
+          <td><%= link_to candidate.name, candidate %></td>
+          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
+          <td><%= link_to candidate.party.name, candidate.party %></td>
+          <td><%= link_to candidate.religion.name, candidate.religion %></td>
+          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
 </div>
+
