--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="search">
   <%= render "search_form" %>
-  <p>search for any candidate, party, faction etc (coming soon)</p>
+  <p>search for any Candidate, Electorate, Party, Religion, Union, Faction </p>
 </div>
 
 <div class="container">
