--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,10 +1,19 @@
-<h1>About us</h1>
-<p>A ripper day Toohey's New Mooloolaba yobbo Sydney funnelweb way out there. G'day mate Sydney Opera House Indian Pacific Railroad sugar glider Coral Sea. Aussie sheila Manly Beach Blue Mountains Woolloomooloo in Oz. Bogan Acca Dacca Byron Bay drive my tawny frogmouth good times.</p>
-
-<p>Spotted quoll Australian Capital Territory willie wagtail RSL Hunter Valley Great Barrier Reef Murrumbidgee River little nipper. Down Under fairywren g'day mate the Big Pineapple VB Commodore roo and joey have a cuppa. Barramundi drier than a dead dingo's donger fairy penguin back of Bourke the Royal Botanic Garden whatever Alice Springs Governor General.</p>
-
-<p>  A larrikin Rozelle Powderfinger The Rocks have a cuppa. Bathurst Ford Falcon eastern whipbird waratah latest goss. Nambucca Heads Blue Mountains Bridgeclimb drier than a dead dingo's donger Sunshine Coast Taronga Zoo have a stickybeak. Castlemaine XXXX and then no worries Pacific Highway eastern brown snake at my local. Blue-ringed octopus Triple M Sydney Ferries INXS I reckon.</p>
-
-<p>  Surf koala drop bear blue-tongued lizard eaten by a saltwater croc Wollongong at my local. Yobbo Nowra Torres Strait Islands a ripper day at St. Vinnie's. Holden Hurricane vegemite South Australia Dee Why bilby tawny frogmouth counter meal.
-
+<h2>About</h2>
+<p>
+There is an election approaching.  We will be voting for people to run our country for the next 3 years but how much do we really know about the candidates beyond the “brand” of Liberal/National and Labour?
+</p>
+<p>
+The Party brand is only part of how a candidate thinks and votes.  The majority of candidates are members of a faction within their party - each of which has their own agenda.  And, of course, the life experience of each candidate will influence how they act when elected.
+</p>
+<p>
+How much do we really know about our candidates?  What do their factions believe in?  What influence do unions have in their views?  Or their religion?   What about their education level?  Their prior careers?  Do the people seeking election truly represent the demographics of our country?
+</p>
+<p>
+Are we able to easily answer these questions? The answer is currently a resounding NO and we aim to change that.  We have gathered data on all the incumbents from the main parties and what we can on the challenger candidates (though there is very little data available on them).  Take a look at the data, compare it to the State and National stats from the last Census, and see whether your candidates truly reflect who we,the voters, are.
+</p>
+<p>
+You can also help us make it easier to answer these questions.  Help us fill in the data gaps by sharing info via this form.  (Link for this form = https://forms.gle/gzNsCNeW1ViKKiPz7
+</p>
+<p>
+<strong>So, Who the Bloody Hell are They?</strong>
 </p>
