--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,12 @@
+<div class="container">
 <h3>An Insight into who the candidates are for Australia's major political parties at the upcoming election</h3>
-
+<p>How much do we really know about the candidates for election in 2022?  What do their factions believe in?  What influence do unions have in their views?  Or their religion?   What about their education level?  Their prior careers?  Do the people seeking election truly represent the demographics of our country?  We think not, but take a look at the data and make up your own mind!</p>
+</div>
+<div class="container search-container">
 <div id="search">
   <%= render "search_form" %>
-  <p>search for any Candidate, Electorate, Party, Religion, Union, Faction </p>
+  <p>Search for any Candidate, Electorate, Party, Religion, Union, Faction </p>
+</div>
 </div>
 
 <div class="container">
@@ -35,16 +39,3 @@
     </div>
   </div>
 </div>
-
-<ul>View data by...
-  <li><%= link_to "Candidates", "/candidates" %></li>
-  <li><%= link_to "Electorates", "/electorates" %></li>
-  <li><%= link_to "Parties", "/parties" %></li>
-  <li><%= link_to "Professions (primary career pre-politics)", "/professions" %></li>
-  <li><%= link_to "Religion", "/religions" %></li>
-  <li><%= link_to "Qualification", "/qualification_levels" %></li>
-  <li><%= link_to "Union Affiliation", "/unions" %></li>
-  <li><%= link_to "Factional Affiliation", "/factions" %></li>
-  <li><%= link_to "Field Of Study", "/field_of_studies" %></li>
-
-</ul>
